docs/v0.1/02-components/08-logo-icon.mdx
---
title: LogoIcon
description: SVG icon inlined in the page at build time.
---

# LogoIcon

The file is read at build time and its content placed in the page. That is
what lets it take its colour from `currentColor` and be sized like the rest of
the text — impossible through an `img` tag, which isolates the document.

## An icon

<LogoIcon src="./icons/book.svg" label="Documentation" />
<LogoIcon src="./icons/star.svg" label="Favourite" />
<LogoIcon src="./icons/lightning.svg" label="Fast" />
<LogoIcon src="./icons/shield.svg" label="Verified" />

```mdx
<LogoIcon src="./icons/book.svg" label="Documentation" />
```

A relative path starts from the page, an absolute path from the version
folder. Nothing can leave it: a page does not read the rest of the machine.

## It follows the text

Placed in a text, the icon takes its size and colour.

<div className="text-indigo-600 text-2xl">
  <LogoIcon src="./icons/star.svg" /> at the size and colour of the text
</div>

<div className="text-sm text-slate-500">
  <LogoIcon src="./icons/star.svg" /> and here, smaller and greyer
</div>

## Sizes

`size` accepts any CSS length.

<div className="flex items-end gap-4 text-emerald-600">
  <LogoIcon src="./icons/shield.svg" size="1rem" />
  <LogoIcon src="./icons/shield.svg" size="2rem" />
  <LogoIcon src="./icons/shield.svg" size="3rem" />
  <LogoIcon src="./icons/shield.svg" size="4rem" />
</div>

```mdx
<LogoIcon src="./icons/shield.svg" size="3rem" className="text-emerald-600" />
```

The colour only follows if the file relies on `currentColor` rather than on a
fixed colour.

## In a list

<ul className="list-none pl-0 space-y-2">
  <li className="flex items-center gap-2">
    <LogoIcon src="./icons/lightning.svg" size="1.1rem" className="text-amber-500" /> No script to
    load
  </li>
  <li className="flex items-center gap-2">
    <LogoIcon src="./icons/shield.svg" size="1.1rem" className="text-emerald-600" /> Links are read
    back before publishing
  </li>
  <li className="flex items-center gap-2">
    <LogoIcon src="./icons/book.svg" size="1.1rem" className="text-indigo-600" /> One version per
    branch
  </li>
</ul>

## At the head of a card

<Columns>
  <Column span={6}>
    <Card className="h-full">
      <CardBody>
        <LogoIcon src="./icons/lightning.svg" size="1.6rem" className="text-amber-500" />
        <strong className="block mt-2 mb-1 text-base font-semibold">Fast</strong>

        No hydration, no bundle to download before reading.
      </CardBody>
    </Card>

  </Column>
  <Column span={6}>
    <Card className="h-full">
      <CardBody>
        <LogoIcon src="./icons/shield.svg" size="1.6rem" className="text-emerald-600" />
        <strong className="block mt-2 mb-1 text-base font-semibold">Verified</strong>

        Dead links and invalid markup stop the publication.
      </CardBody>
    </Card>

  </Column>
</Columns>

## Decorative or meaningful

Without `label`, the icon is treated as decorative and hidden from screen
readers — which is right when nearby text already says the same thing. With
`label`, it becomes a described image.

```mdx
<LogoIcon src="./icons/star.svg" />
<LogoIcon src="./icons/star.svg" label="Favourite" />
```

In the list above, the icons have no `label`: the text next to them already
carries the meaning, and announcing it twice would tell nothing.

## What it refuses

A missing file, a file without an `svg` tag, a target leaving the version
folder: each one stops the build, naming the expected path. A missing icon
would otherwise leave an empty box that nobody notices.

The scripts and event handlers present in a file are removed before inlining.
The produced site loads no JavaScript, and a component is not going to
introduce any.
